welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:27: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
			if (getDirection==Direction.EST && x=false){
                                                        ^